<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/whitesmoke"
>
    <ImageView
            android:id="@+id/Login_imageView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/login_ic_wft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="88dp"/>

    <EditText
            android:id="@+id/Login_acc_et"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="20sp"
            android:ellipsize="end"
            android:background="@null"
            android:hint="@string/Login_acc_et"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/login_cursor_color"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/Login_imageView"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="35dp"
            android:paddingLeft="10dp"

    />
    <ImageButton
            android:id="@+id/Login_clean1"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:background="@drawable/login_clean"
            app:layout_constraintLeft_toRightOf="@id/Login_acc_et"
            app:layout_constraintBottom_toBottomOf="@id/Login_acc_et"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:visibility="invisible"
    />


    <View
            android:id="@+id/Login_view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/Login_acc_et"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_view"
    />

    <ImageButton
            android:id="@+id/Login_eye"
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:background="@drawable/login_imagebtn_eye"
            app:layout_constraintRight_toLeftOf="@id/Login_pw_et"
            app:layout_constraintBottom_toBottomOf="@id/Login_pw_et"
            android:layout_marginBottom="5dp"
    />

    <EditText
            android:id="@+id/Login_pw_et"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="20sp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/Login_pw_et"
            android:inputType="textPassword"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/login_cursor_color"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/Login_acc_et"
            android:layout_marginTop="25dp"
            android:layout_marginRight="85dp"
            android:layout_marginLeft="30dp"
            android:paddingLeft="10dp"
    />

    <ImageButton
            android:id="@+id/Login_clean2"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:background="@drawable/login_clean"
            app:layout_constraintLeft_toRightOf="@id/Login_pw_et"
            app:layout_constraintBottom_toBottomOf="@id/Login_pw_et"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:visibility="invisible"
    />

    <TextView
            android:id="@+id/Login_forgot_pw"
            android:layout_height="25dp"
            android:layout_width="60dp"
            android:text="@string/Login_forgot_pw"
            app:layout_constraintLeft_toRightOf="@id/Login_clean2"
            app:layout_constraintBottom_toBottomOf="@+id/Login_pw_et"
            android:clickable="true"
            android:textColor="@color/gray"
            android:layout_marginRight="5dp"

    />

    <View
            android:id="@+id/Login_view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/Login_pw_et"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_view"
    />

    <Button
            android:id="@+id/Login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_bt"
            android:textColor="@color/whitesmoke"
            android:textSize="25sp"
            android:background="@drawable/login_button"
            app:layout_constraintTop_toBottomOf="@+id/Login_pw_et"
            android:layout_marginTop="25dp"
    />
    <TextView
        android:id="@+id/Login_sm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="15sp"
        android:text="@string/Login_sm_tv"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/Login_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
    />
    <TextView
        android:id="@+id/Login_rg_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:textSize="15sp"
        android:text="@string/Login_rg_tv"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/Login_bt"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
    />
</android.support.constraint.ConstraintLayout>